--- a/Regression_Analysis/Simple_Linear_Regression.ipynb
+++ b/Regression_Analysis/Simple_Linear_Regression.ipynb
@@ -562,14 +562,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**sm.OLS 적합시키기**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sm.OLS 적합시키기\n",
     "model1 = sm.OLS(target, crim1)\n",
     "fitted_model1 = model1.fit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**summary함수를 통해 결과출력**"
    ]
   },
   {
@@ -673,7 +686,6 @@
     }
    ],
    "source": [
-    "# summary함수를 통해 결과출력\n",
     "fitted_model1.summary()"
    ]
   },
@@ -681,9 +693,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "결과 설명\n",
+    "**[ 결과 설명 ]**\n",
     "- 독립변수(X)가 설명하는 종속변수(y)의 변동성은 총 15% 정도됨.\n",
     "- 이때, CRIM에 해당하는 회귀계수는 -0.4 단위(감소), P-VALUE보면 해당 관계 유의미함"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**회귀 계수 출력**"
    ]
   },
   {
@@ -705,7 +724,6 @@
     }
    ],
    "source": [
-    "## 회귀 계수 출력\n",
     "fitted_model1.params"
    ]
   },
@@ -713,7 +731,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "y_hat = beta0 + beta1 * X 계산해보기"
+    "**y_hat = beta0 + beta1 * X 계산해보기**"
    ]
   },
   {
@@ -742,7 +760,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "적합시킨 직선 시각화"
+    "**적합시킨 직선 시각화**"
    ]
   },
   {
@@ -802,7 +820,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "residual 시각화"
+    "**residual 시각화**"
    ]
   },
   {
@@ -833,7 +851,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "잔차의 합 계산"
+    "**잔차의 합 계산**"
    ]
   },
   {
